removed favicon and fixed the overflow issue in product details

--- a/src/app/shop/product-details/product-details.component.css
+++ b/src/app/shop/product-details/product-details.component.css
@@ -90,6 +90,9 @@ svg:hover {
     max-width: 550px;
     max-height: 650px;
 }
+.row {
+    overflow: hidden;
+}
 .col, .row {
     position: relative;
 }
